test/good/modules/use05.px

func one() Float def
    use math
    return exp(0.0)

print one()
