test/bad/tuples/tuple08.px

func f() def
    return

0, f()
